finished 3 module pages

--- a/module1.html
+++ b/module1.html
@@ -25,73 +25,161 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-auto gy-4">
+                    <div class="col-lg-8 gy-4">
                         <div class="page-paragraph">
-                            <h2>Sustainable Eating</h2>
-                            <p>
-                                What foods we decide to eat has an impact on not only our health, but also our environment. So ... improving the quality of our diet, and also reducing environmental impact, is a major focus all over the world (1).
-                            </p>
-                            <h2>The Western Diet</h2>
-                            <p>
-                                The “Western diet” is the commonly adopted diet nowadays. This diet includes a high intake of refined carbohydrates (like pasta, white rice, and pastries), added sugar, sodium, and animal products, paired with a low intake of fruits, vegetables, and whole grains.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-auto gy-4">
-                        <div class="page-paragraph-alt">
                             <div class="row justify-content-center">
                                 <div class="col-auto gy-4">
-                                    <img src="sample_images/module1img1.jpg" class="img-fluid" alt="..." style="max-height: 30vh">
+                                    <h2>Sustainable Eating</h2>
+                                    <p>
+                                        What foods we decide to eat has an impact on not only our health, but also our environment. So ... improving the quality of our diet, and also reducing environmental impact, is a major focus all over the world (1).
+                                    </p>
+                                    <h2>The Western Diet</h2>
+                                    <p>
+                                        The "Western diet" is the commonly adopted diet nowadays. This diet includes a high intake of refined carbohydrates (like pasta, white rice, and pastries), added sugar, sodium, and animal products, paired with a low intake of fruits, vegetables, and whole grains.
+                                    </p>
                                 </div>
-                                <div class="col-auto gy-4">
-                                    <img src="sample_images/module1img2.jpg" class="img-fluid" alt="..." style="max-height: 30vh">
+                                <div class="col-4 gy-4">
+                                    <img src="sample_images/module1img1.jpg" class="img-fluid" alt="..." style="max-width: 100%; height: 100%;">
+                                </div>
+                                <div class="col-8 gy-4">
+                                    <img src="sample_images/module1img2.jpg" class="img-fluid" alt="..." style="max-width: 100%; height: 100%;">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-xl-9 gy-4">
+                    <div class="col-lg-8 gy-4">
+                        <div class="page-paragraph-alt">
+                            <h2>Greenhouse Gases and Land Use</h2>
+                            <p>But what are greenhouse gases? Why should we care about them? A greenhouse gas, also known as a "GHG", is a type of gas that traps heat in the Earth's atmosphere. Some types of GHG include water vapor, carbon dioxide, methane, nitrous oxides, and ozone. Majority of greenhouse gas emissions are a result of many different human activities such as transportation, electricity production, and agriculture. The most common type of GHG caused by human activity, and the one you're probably the most familiar with, is carbon dioxide (CO2). These emissions provoke extreme climate change by altering the composition of the Earth's atmosphere which can be seen through floods, droughts, and heat (2-6). </p>
+                        </div>
+                        <img src="sample_images/module1img7.jpg" class="img-fluid" alt="...">
+                        <div class="page-paragraph-alt">
+                            <p>Global agriculture (the farming of our crops and livestock) currently occupies over a third of the world's land - That's 40% of the worlds land used solely for farming (as is 70% of our freshwater)! Agriculture is also the cause for around 30% of the total GHG emissions that are made by human activity, with 14.5% estimated to be from livestock alone (2, 7-9). Clearly our current food production strategies are a great threat to the environment, with most of our emissions caused by the farming of animals.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 gy-4">
                         <div class="page-paragraph">
                             <h5>Let's have a look at the current diets of our friends Jordy, Clive, Brianna, and Alexis.</h5>
                         </div>
-                        <div class="col-auto gy-4">
-                            <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                                <div class="carousel-indicators">
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
-                                </div>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img src="sample_images/module1img3.png" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="sample_images/module1img4.png" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="sample_images/module1img5.png" class="d-block w-100" alt="...">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="sample_images/module1img6.png" class="d-block w-100" alt="...">
-                                    </div>
-                                </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Previous</span>
-                                </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Next</span>
-                                </button>
+                        <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
                             </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="sample_images/module1img3.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="sample_images/module1img4.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="sample_images/module1img5.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="sample_images/module1img6.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
                         <div class="page-paragraph">
                             <p>Jordy is a classic example of the Western diet, full of refined carbs like white rice and a high intake of red meat, paired with a small amount of fresh vegetables. This kind of diet presents challenges for both the health of the population and environmental sustainability. In terms of sustainability, it is a major contributor to environmental burdens including greenhouse gas emissions and land use (1). By including some simple swaps into your diet, such as Clive consuming chicken rather than red meat, he saves a whopping 2,323kg of greenhouse gas production each year.</p>
                         </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class="page-paragraph-alt">
+                            <h2>Population on the rise</h2>
+                            <p>The world population increases by approximately 70 million people each year, with expectations of more than 9.6 billion people by 2050. With this comes impeccable food demands that cannot be reached solely through current food strategies. Therefore, the use of alternative food sources other than traditional crops and livestock is necessary. Already 70% of the worlds agricultural land (and 30% of the world's total land) is currently being used by livestock, 40% of the biomass produced on land and the sea is being consumed by humans, and 70% of the worlds freshwater is being used for agricultural purposes. With the increased demand for food, that doesn't leave much room for more farming, and doesn't offer the future (and rapidly growing) population enough to eat! This is why we need to look to other food sources that aren't animal based or be mindful of the amount that we consume. For example, think about the amount of meat you consume on a weekly basis...what kind of meat is it? Red meat, like beef, has a very high environmental impact in comparison to white meats, like chicken (10). But, by reducing how frequently we consume beef, we can save a lot of GHG emissions! Jordy consumes beef daily, whereas Brianna is mindful of her consumption and sticks to eating beef just once or twice a week. In doing so, Brianna reduces her annual GHG emissions by 2,216kg! (11, 12).</p>
+                        </div>
+                        <div class="col-auto gy-4">
+                            <img src="sample_images/module1img8.jpg" class="img-fluid" alt="...">
+                        </div>
+                        <div class="page-paragraph-alt">
+                            <p class="annotation">Figure 1. The projected population of Australia nationwide from the year 2020 to 2050 (High series) (13).</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class=" card mb-3 page-paragraph">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="sample_images/module1img9.jpg" class="img-fluid" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <p>Alongside some emerging technologies in agriculture, a change in diet is suggested to be paramount to reduce the environmental impact of the food system (8). The production of meat and animal based food products are associated with a high environmental impact (as seen with Jordy's beef eating habits) and is a major contributor to climate change (9). For example, meat from livestock (cows in particular) contribute to greenhouse gas emissions through their production of methane, this happens as a natural part of their digestive process where they release methane as a by-product (mostly through burping) (10). Soils used in farming are a dominant source of nitrous oxide (one of those pesky types of GHG we talked about), accounting for 57% of total nitrous oxide emissions in Australia in 2018, just from the soil (14). This makes agriculture and food production one of the largest causes of environmental damage, burdening the health of the planet and consequently the human population. However, it is also an area that we have a degree of control over, giving us the opportunity to bring about positive change (7)</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class="page-paragraph-alt">
+                            <h2>Food Insecurity</h2>
+                            <p>Altering our ways by following a more sustainable food system and diet will help both the planet and ourselves. Food insecurity is being worsened by climate change, with temperature changes, droughts, and floods affecting food crops and consequently food accessibility in regions worldwide, including Australia. The increased amount of carbon dioxide in the atmosphere is also known to reduce the nutrient content of our food, leaving the potential for widespread health implications to the global population, particularly those who aren't consuming an adequate amount of quality food to meet their nutritional needs already (7). In Australia, less than 1 in 10 adults meet the daily recommendation of 5-6 serves of vegetables a day and 49% don't eat the recommended 2 serves of fruit (15).</p>
+                        </div>
+                        <div class="col-auto gy-4">
+                            <img src="sample_images/module1img10.jpg" class="img-fluid" alt="..." style="width: 100%">
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class=" card mb-3 page-paragraph">
+                            <div class="row g-0">
+                                <div class="col-md-6">
+                                    <img src="sample_images/module1img11.jpg" class="img-fluid" alt="...">
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="card-body">
+                                        <p>Despite all the negative environmental effects that animal-based food production can cause, lots of the food being produced is not even being eaten! Around 2 billion people could be fed an 8,786 kilojoule diet a day with the food that is wasted each year. The amount of food waste produced is a direct indication of the amount of cropland, water, and other resources that are being used wastefully as the food is ultimately being thrown out by consumers (1).</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class=" card mb-3 page-paragraph-alt">
+                            <div class="row g-0">
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h2>What Next?</h2>
+                                        <p>Research has shown that healthier diets, ones that stray from the commonly adopted "Western Diet", are generally lower in their environmental impact, and by following a higher quality diet there is a reduction in greenhouse gases, water use, and cropland use (1). For example, by reducing the amount of meat we consume (as we discussed with Brianna's diet), we can achieve a reduction in greenhouse gas emissions while still reaching our dietary requirements (9).</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <img src="sample_images/module1img12.jpg" class="img-fluid" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto gy-4">
+                        <a href="#" class="btn page-paragraph"><h2>Back to Top</h2></a>
+                    </div>
+                    <div class="col-auto gy-4">
+                        <a href="#" class="btn page-paragraph-alt"><h2>Take the Test</h2></a>
                     </div>
                 </div>
             </div>
