--- a/module3.html
+++ b/module3.html
@@ -20,8 +20,113 @@
                 <div class="row justify-content-center">
                     <div class="col-auto">
                         <div class="page-header">
-                            <h1>This is Module 3</h1>
+                            <h1>Alternative Proteins</h1>
                         </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class="page-paragraph">
+                            <h1>Insects</h1>
+                            <h2>Entomophagy</h2>
+                            <p>Entomophagy, "the consumption of insects", is a traditional practice in countries such as Asia, Africa, and South America. In Australia, First Nation Peoples have consumed insects for thousands of years, with more than 60 native species being eaten such as the infamous witjuti grub. Overall, insects are being regularly consumed by 2 billion people worldwide, however consumption is very uncommon outside of these countries. This is because in many Western countries, insects are deemed to be "dirty" and there is a fear of contamination and disease associated when it comes to eating insects. This is largely due to a lack of knowledge in the way that edible insects are farmed and how they taste. Edible insects are clean, tasty, and nutritious, as they are known to be a rich source of protein, as well as fat, energy, vitamins, and minerals!</p>
+                        </div>
+                        <div class="page-paragraph">
+                            <div class="row">
+                                <div class="col-6">
+                                    <img src="sample_images/module3img1.png" class="img-fluid" alt="...">
+                                    <span class="annotation">Image of hands holding several Wijuti Grubs (19)</span>
+                                </div>
+                                <div class="col-6">
+                                    <img src="sample_images/module3img2.jpg" class="img-fluid" alt="...">
+                                    <span class="annotation">Image of a locust (grasshopper)</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="page-paragraph">
+                            <p>In 2018, the global edible insect market value was estimated to be 406 million USD, and by 2023 it is predicted to increase massively to over 1.18 billion as we continue to learn about how insects are a nutritious and sustainable food product, making edible insects the fastest growing alternative protein market worldwide. Edible insects also continue to be presented as a possible solution to environmental issues like climate change and food insecurity that are ultimately caused by agriculture and other human activities (11, 20-23).</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class="page-paragraph-alt">
+                            <h2>Types of Edible Insects</h2>
+                            <p>There is a wide range of insects that you can try, with more than 1900 insects reported as being used as human food (11). The main types of insects that are eaten globally include beetles, ants, bees and wasps, crickets and grasshoppers, moths, butterflies, and termites (23). Edible insects are available in a range of food forms, meaning they don't have to be eaten whole in order to reap the benefits. Types of edible insect products available globally include protein bars, breads, crackers, pastas, beers, milks, chocolates, butters, oils, and much more (23)</p>
+                        </div>
+                        <div class="page-paragraph-alt">
+                            <div class="row">
+                                <div class="col-4">
+                                    <img src="sample_images/module3img3.jpg" class="img-fluid" alt="...">
+                                </div>
+                                <div class="col-4">
+                                    <img src="sample_images/module3img4.jpg" class="img-fluid" alt="...">
+                                </div>
+                                <div class="col-4">
+                                    <img src="sample_images/module3img5.jpg" class="img-fluid" alt="...">
+                                </div>
+                            </div>
+                            <span class="annotation">Image of several food products that contain edible insects. From left to right, pasta and beer, pasta, corn chips.</span>
+                        </div>
+                        <div class="page-paragraph-alt">
+                            <p>In Australia, edible insects are right under your nose. The Woolworths "Macro" range offers certified organic products, that includes their Cricket powder that can be used as a wonderful source of protein as well as B12, zinc, and iron.</p>
+                        </div>
+                        <div class="page-paragraph-alt">
+                            <div class="row justify-content-center">
+                                <div class="col-4">
+                                    <img src="sample_images/module3img6.jpg" class="img-fluid" alt="...">
+                                    <span class="annotation">Image of Woolworths Australian Cricket Powder from their "Macro" range</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class="page-paragraph">
+                            <h2>Sustainability</h2>
+                            <p>Although industrialised insect production is a new area, studies have shown that insect production can have far less of an environmental impact than chicken farms, with impact continuing to decrease as the farms are industrialised further (22). In a similar case, chickens require three times the amount of land and generate 50% more greenhouse gases when compared to mealworms, while beef requires almost 10 times the amount of land and emits 18 times more greenhouse gases (23).</p>
+                        </div>
+                        <div class="page-paragraph">
+                            <img src="sample_images/module3img7.png" class="img-fluid" style="width:100%" alt="...">
+                            <span class="annotation">Figure 3. Comparison of the amount of land used and greenhouse gas' produced to farm mealworms, chicken, and beef for human consumption (23).</span>
+                        </div>
+                        <div class="page-paragraph">
+                            <p>Compared to livestock production, many insects have a high feed-conversion efficiency, they can also be reared on organic waste, they emit fewer greenhouse gases, and take a small fraction of the feed, water and space required by traditional livestock (22). For example, grasshoppers, crickets, flies, and beetles can consume a lot of the waste produced from farming or plants such as grasses and silage that humans and traditional livestock cannot consume. By eating materials that we aren't able to eat ourselves, insects don't compete with the human food supply! This also means that they don't require feed like pigs and chickens do, who are mainly fed with grains that require land and water to be grown (11).</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class="page-paragraph-alt">
+                            <h2>Nutritional Benefits</h2>
+                            <p>Many edible insects are just as nutritious as animal-based foods, this offers a potential solution to fixing our global food and nutrition insecurity! Though macro and micronutrients vary greatly by insect, some species contain as much protein as beef, some contain more iron than spinach, and others offer as much vitamin B12 as salmon (22).</p>
+                            <p>The protein content of edible insects (on a dry matter basis) can range from 35.3% for termites to 61.3% for crickets, grasshoppers, and locusts. Grasshoppers, crickets, and locusts are found to be rich in proteins and represent a valuable alternative protein source, with protein contents up to 77% reported for several grasshopper species! When comparing edible insects to plant protein sources like soybeans (that have a protein content of 35.8%), you can see how great the potential of insects is! (20).</p>
+                        </div>
+                        <div class="page-paragraph-alt">
+                            <img src="sample_images/module3img8.png" class="img-fluid" style="width:100%" alt="...">
+                            <span class="annotation">Table 1. Nutritional profile of insects(20). The average nutrient composition of insects, on a dry matter basis, including their energy contents.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 gy-4">
+                        <div class="page-paragraph">
+                            <p>That's it! Our food choices and how important they are for our environment. Will you follow Brianna in reducing your red meat consumption to once or twice a week? Maybe you'll be adventurous and add some Cricket powder into your next recipe?</p>
+                            <p>Here's a list of some sites that you may find interesting to continue learning more:</p>
+                            <p><a style="overflow-wrap: anywhere" href="https://theconversation.com/we-asked-hundreds-of-aussies-whether-theyd-eat-insects-and-most-said-yes-so-whats-holding-people-back-173595">https://theconversation.com/we-asked-hundreds-of-aussies-whether-theyd-eat-insects-and-most-said-yes-so-whats-holding-people-back-173595</a></p>
+                            <p><a style="overflow-wrap: anywhere" href="https://research.csiro.au/edibleinsects/#:~:text=A%20roadmap%20for%20the%20strategic,insects%20present%20an%20important%20opportunity.">https://research.csiro.au/edibleinsects/#:~:text=A%20roadmap%20for%20the%20strategic,insects%20present%20an%20important%20opportunity.</a></p>
+                            <p><a style="overflow-wrap: anywhere" href="https://www.ozharvest.org/food-waste-facts/">https://www.ozharvest.org/food-waste-facts/</a></p>
+                            <p><a style="overflow-wrap: anywhere" href="https://www.wwf.org.uk/what-can-i-do/10-tips-help-you-eat-more-sustainably">https://www.wwf.org.uk/what-can-i-do/10-tips-help-you-eat-more-sustainably</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto gy-4">
+                        <a href="#" class="btn page-paragraph"><h2>Back to Top</h2></a>
+                    </div>
+                    <div class="col-auto gy-4">
+                        <a href="#" class="btn page-paragraph-alt"><h2>Take the Test</h2></a>
                     </div>
                 </div>
             </div>
