--- a/sidebar.html
+++ b/sidebar.html
@@ -1,16 +1,18 @@
-<div class="sidebar-button row">
-    <div class="col-auto">
-    <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-        <i class="fas fa-bars" ></i>
-    </a>
-    </div>
-    <div class="col-auto">
-        <div class="vertical-bar"></div>
-    </div>
-    <div class="col-auto">
-    <a href="index.html" style="text-decoration: none;">
-        DINE Lab, RMIT University
-    </a>
+<div class="sidebar-button">
+    <div class="row">
+        <div class="col-auto">
+        <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+            <i class="fas fa-bars" ></i>
+        </a>
+        </div>
+        <div class="col-auto">
+            <div class="vertical-bar"></div>
+        </div>
+        <div class="col-auto">
+        <a href="index.html" style="text-decoration: none;">
+            DINE Lab, RMIT University
+        </a>
+        </div>
     </div>
 </div>
 
